fixed bug where footer got stuck under mobile nav

--- a/website/src/components/LandingPage/styles/_contact-section.scss
+++ b/website/src/components/LandingPage/styles/_contact-section.scss
@@ -75,6 +75,10 @@
 }
 
 @media (max-width: 535px) {
+
+    #contact{
+        margin-bottom: 0;
+    }
     .social-links {
         display: flex;
         gap: 0 !important;
