--- a/website/src/components/LandingPage/styles/footer.scss
+++ b/website/src/components/LandingPage/styles/footer.scss
@@ -36,3 +36,11 @@
         }
     }
 }
+
+@media (max-width: 980px) {
+    .footer-container{
+        margin-bottom: 375px;
+
+    }
+    
+}
